--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "eslint-plugin-import": "^2.23.4"
   },
   "dependencies": {
-    "eslint-config-prettier": "^8.3.0"
+    "eslint-config-prettier": "^8.3.0",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.4"
   }
 }
