--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "eslint-plugin-import": "^2.23.4"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "inquirer": "^8.1.1"
+    "inquirer": "^8.1.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.4"
   }
