--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "eslint-plugin-import": "^2.23.4"
   },
   "dependencies": {
+    "chalk": "^4.1.1",
+    "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "express": "^4.17.1",
     "inquirer": "^8.1.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.4"
