--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "express": "^4.17.1",
     "inquirer": "^8.1.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.4"
